5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1800_2564.log
== SUBMITION (2019-06-11 10:14:22) 
-- CODE:
from numpy import*
time1 = array(eval(input("asds: ")))
time2 = array(eval(input("asds: ")))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0] + 1 
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time[i] < time2[i]:
		vet[2] = vet[2] + 1
print(vet)

-- EXECUTION TIME:
1.07226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 10, in <module>
    elif time[i] < time2[i]:
NameError: name 'time' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:14:31) 
-- CODE:
from numpy import*
time1 = array(eval(input("asds: ")))
time2 = array(eval(input("asds: ")))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0] + 1 
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time[i] < time2[i]:
		vet[2] = vet[2] + 1
print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:14:41) 
-- CODE:
from numpy import*
time1 = array(eval(input("asds: ")))
time2 = array(eval(input("asds: ")))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0] + 1 
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time[i] < time2[i]:
		vet[2] = vet[2] + 1
print(vet)

-- EXECUTION TIME:
1.1836
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 10, in <module>
    elif time[i] < time2[i]:
NameError: name 'time' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:14:57) 
-- CODE:
from numpy import*
time1 = array(eval(input("asds: ")))
time2 = array(eval(input("asds: ")))
vet = zeros(3, dtype = int)
for i in range(size(time1)):
	if time1[i]>time2[i]:
		vet[0] = vet[0] + 1 
	elif time1[i] == time2[i]:
		vet[1] = vet[1] + 1
	elif time1[i] < time2[i]:
		vet[2] = vet[2] + 1
print(vet)

-- EXECUTION TIME:
1.04729
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
